WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163074
Crash when ApplePaySession.completeMerchantValidation is not passed a dictionary
https://bugs.webkit.org/show_bug.cgi?id=163074
Summary
Crash when ApplePaySession.completeMerchantValidation is not passed a dictionary
Anders Carlsson
Reported
2016-10-06 13:35:58 PDT
Crash when ApplePaySession.completeMerchantValidation is not passed a dictionary
Attachments
Patch
(1.48 KB, patch)
2016-10-06 13:36 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-10-06 13:36:56 PDT
Created
attachment 290860
[details]
Patch
Anders Carlsson
Comment 2
2016-10-06 14:06:25 PDT
Committed
r206881
: <
http://trac.webkit.org/changeset/206881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug