Crash when ApplePaySession.completeMerchantValidation is not passed a dictionary https://bugs.webkit.org/show_bug.cgi?id=163074 rdar://problem/27824842

Reviewed by Tim Horton.

Raise a type error on a null initializer object.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::ApplePaySession::completeMerchantValidation):

Canonical link: https://commits.webkit.org/180934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206881 268f45cc-cd09-0410-ab3c-d52691b4dbfc